# arena

./: .gitignore  .gitmodules  LICENSE  README.md  crius_dp_sim_density_0_1.sh  crius_dp_sim_density_0_5.sh  crius_dp_sim_density_1_0.sh  crius_dp_sim_density_1_5.sh  crius_dp_sim_density_2_0.sh  crius_dp_sim_density_2_5.sh  db_querier.py  scheduler.py  simulator.py  trace_manager.py  utils.py
baselines/: README.md  elasticflow_sched.py  fcfs_sched.py  gandiva_sched.py  gavel_sched.py  sia_sched.py
database/: dp_mem.json  gen_prof_database.py  prof_database.pkl  prof_database_revision.json
job/: job.py
macro/: macro_def.py
plot/: plotter.py
plot/jct/: crius-backup_jct.npy  crius-ddl_jct.npy  crius-nh_jct.npy  crius-ns_jct.npy  elasticflow-l_jct.npy  elasticflow_jct.npy  fcfs_jct.npy  gavel_jct.npy  sia_jct.npy
plot/jct_helios/: elasticflow-l_jct.npy  fcfs_jct.npy  gandiva_jct.npy  gavel_jct.npy  sia_jct.npy
plot/jct_pai/: crius_jct.npy  (+5 more)
resources/: h100_cluster_spec.json  h100_l20_cluster_spec.json  hardware_specs.py  resource_abs.py  resource_interface.py  sim_cluster_spec.json
runtime/: .dockerignore  RT_README.md  client.Dockerfile  client_cu112.Dockerfile  client_cu112_sched.Dockerfile  cluster_spec.json  cluster_spec_32_nodes.json  cluster_spec_8_nodes.json  crius_runtime.py  profile.Dockerfile  profile_cu112.Dockerfile  profile_cu118.Dockerfile  profile_cu124.Dockerfile
runtime/jaxpr/cpp/: CMakeLists.txt  README.md  install.sh
runtime/jaxpr/cpp/cmake/: FindNVPerf.cmake
runtime/jaxpr/cpp/src/: CMakeLists.txt  crius_cupti.cpp  inspect_hardware  inspect_hardware.cu  profiler.cpp  profiler.h
traces/: _dummy_runtime_trace.csv  _runtime_trace.csv  _simulate_trace_pai.csv  _simulate_trace_venus.csv  dummy_runtime_trace.csv  dummy_runtime_trace_2_nodes.csv  dummy_runtime_trace_revision.csv  dummy_trace.csv  regenerate_rt_trace.py  regenerate_rt_trace_h100.py  regenerate_rt_trace_h100_l20.py  regenerate_sim_trace.py  runtime_trace.csv  runtime_trace_a40_1_a10_2.csv  runtime_trace_raw.csv  runtime_trace_revision.csv  runtime_trace_revision_gavel_fail.csv  runtime_trace_revision_homo.csv  runtime_trace_revision_sia_fail_density_2.csv  runtime_trace_revision_sia_gavel_ef_near_density_3.csv  simulate_trace_pai.csv  simulate_trace_philly.csv  simulate_trace_row.csv  simulate_trace_venus.csv
(+934 files in other folders)
